--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         style="border-radius:100px"
       ></video>
     </div>
-    <h1
+    <!-- <h1
       class="tracking-in-expand"
-      style="text-align: right; color: black; font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; margin-top: -400px; margin-right: 100px"
+      style="text-align: center; color: black; font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; margin-top: -400px; margin-left: 500px;"
     >
       <span style="color:cornflowerblue">I</span>n<span
         style="color:cornflowerblue"
@@ -48,23 +48,14 @@
 
     <p
       class="tracking-in-contract"
-      style=" text-align: right; color: black; font-family: 'Quicksand', sans-serif; font-size: 2em; font-weight: 600; margin-top: 100px; margin-right: 50px"
+      style=" text-align: right; color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; margin-top: 100px; margin-right: 50px"
     >
-      Insight into your emotion
-    </p>
+      An Insight into your emotion
+    </p> -->
 
     <div class="container">
-      <button
-        type="button"
-        class="btn btn-primary btn-lg"
-        style="float: right; margin-top: 5em; margin-right: 50px;font-family: 'Quicksand', sans-serif;"
-      >
-        Start Now!
-      </button>
     </div>
-    <div class="container" style="margin-top: 20em">
-      <h2 style="margin-bottom: 10em">Explain Shit</h2>
-    </div>
+    
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
