--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/4/47/PNG_transparency_demonstration_1.png">
+    <link rel="icon" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="theme.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Quicksand&display=swap"
