--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <p
               style="line-height: 2; text-align: left; padding-left:120px; padding-top:50px;font-family: 'Quicksand', sans-serif;"
             >
-              InMotion is a program that helps you keep track of the emotional
-              status. It adopts Face Api, which allows InMotion to analyze the
+              InMotion is a program that helps you keep track of your emotional
+              status. It adopts Face-api, which allows InMotion to analyze the
               stories buried underneath your facial expressions. Through the
               webcam, in each frame InMotion captures and discovers the ratio of
-              six emotional categories: happy, angry, disgusted, fearful,
-              neutral, sad, surprise, respectively. The data is visualized by
+              seven emotional categories: happy, neutral, surprised, sad, angry,
+              disgusted, and fearful, respectively. The data is visualized by
               presenting the composition of your emotion in real-time
               two-dimensional diagram. By moving the cursor around, you can
               readily take an insight into your emotion at any moment.
