--- a/index.html
+++ b/index.html
@@ -1,79 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
     <link
       rel="icon"
       href="https://github.com/LeChn/hackduke2019/blob/master/favicon.png?raw=true"
     />
-    <link
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      media="all"
-    />
+    <link rel="stylesheet" type="text/css" href="theme.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Quicksand&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>InMotion</title>
-    <script
-      src="https://kit.fontawesome.com/2492c9ba58.js"
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="face-api.min.js"></script>
-    <script defer src="script.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <style>
-      canvas {
-        position: absolute;
-      }
-    </style>
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      media="all"
+    />
+    <title>InMotion - An Insight into Your Emotions</title>
   </head>
   <body>
-    <video
-      id="video"
-      width="720"
-      height="560"
-      autoplay
-      muted
-      style="border-radius:100px;"
-    ></video>
+    <h1
+      class="tracking-in-expand centered"
+      style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; "
+    >
+      <span style="color:cornflowerblue">I</span>n<span
+        style="color:cornflowerblue"
+        >M</span
+      >otion
+    </h1>
 
-    <div class="container">
-      <div class="row">
-        <div class="col"></div>
-        <div class="col">
-          <div class="container" style="margin-top: -500px">
-            <h2 style="text-align:right;font-family: 'Quicksand', sans-serif;">
-              Take a Look at Your Emotion <i class="fas fa-surprise"></i>
-            </h2>
-            <!--        <p>InMotion is a program designed by Yanghaoyu Chen, Yichong Ma, Zihan Shu, Haozhe Zhang, Lutong Zhang. </p >-->
-            <p
-              style="line-height: 2; text-align: left; padding-left:120px; padding-top:50px;font-family: 'Quicksand', sans-serif;"
-            >
-              InMotion is a program that helps you keep track of your emotional
-              status. It adopts Face-api, which allows InMotion to analyze the
-              stories buried underneath your facial expressions. Through the
-              webcam, in each frame InMotion captures and discovers the ratio of
-              seven emotional categories: happy, neutral, surprised, sad, angry,
-              disgusted, and fearful, respectively. The data is visualized by
-              presenting the composition of your emotion in real-time
-              two-dimensional diagram. By moving the cursor around, you can
-              readily take an insight into your emotion at any moment.
-            </p>
-          </div>
-        </div>
-      </div>
+    <h2
+      class="tracking-in-contract centeredBot"
+      style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; "
+    >
+      An Insight into your emotion
+    </h2>
+
+    <div>
+      <a href="video.html"
+        ><button
+          style="position: fixed;top:60%; left:46%;"
+          type="button"
+          class="btn btn-success btn-lg"
+        >
+          Demo <i class="fa fa-chevron-circle-right hvr-icon"></i></button
+      ></a>
     </div>
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -89,18 +78,5 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-
-    <div id="tester"></div>
-
-    <div
-      class="container-fluid"
-      style="font-family: 'Quicksand', sans-serif;background-color: #F8F9F9   ;"
-    >
-      <p style="text-align: center;font-weight: bold;">Credits:</p>
-      <p style="text-align: center;">
-        InMotion is proudly provided by five cool Florida Gators: Yanghaoyu
-        Chen, Yichong Ma, Zihan shu, Haozhe Zhang and Lutong Zhang.
-      </p>
-    </div>
   </body>
 </html>
