--- a/video.html
+++ b/video.html
@@ -38,37 +38,49 @@
     </style>
   </head>
   <body>
-    <video
-      id="video"
-      width="720"
-      height="560"
-      autoplay
-      muted
-      style="border-radius:100px;"
-    ></video>
+    <div class="">
+      <div class="container col">
+        <div
+          id="canvasDiv"
+          class="text-center align-items-center justify-content-center"
+        >
+          <video
+            id="video"
+            width="50%"
+            height="50%"
+            autoplay
+            muted
+            style="border-radius:100px;"
+          ></video>
+        </div>
+      </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col"></div>
-        <div class="col">
-          <div class="container" style="margin-top: -500px">
-            <h2 style="text-align:right;font-family: 'Quicksand', sans-serif;">
-              Take a Look at Your Emotion <i class="fas fa-surprise"></i>
-            </h2>
-            <!--        <p>InMotion is a program designed by Yanghaoyu Chen, Yichong Ma, Zihan Shu, Haozhe Zhang, Lutong Zhang. </p >-->
-            <p
-              style="line-height: 2; text-align: left; padding-left:120px; padding-top:50px;font-family: 'Quicksand', sans-serif;"
-            >
-              InMotion is a program that helps you keep track of your emotional
-              status. It adopts Face-api, which allows InMotion to analyze the
-              stories buried underneath your facial expressions. Through the
-              webcam, in each frame InMotion captures and discovers the ratio of
-              seven emotional categories: happy, neutral, surprised, sad, angry,
-              disgusted, and fearful, respectively. The data is visualized by
-              presenting the composition of your emotion in real-time
-              two-dimensional diagram. By moving the cursor around, you can
-              readily take an insight into your emotion at any moment.
-            </p>
+      <div class="container col">
+        <div class="row">
+          <div class="col"></div>
+          <div class="col">
+            <div class="container">
+              <h2
+                style="text-align:right;font-family: 'Quicksand', sans-serif;"
+              >
+                Take a Look at Your Emotion <i class="fas fa-surprise"></i>
+              </h2>
+              <!--        <p>InMotion is a program designed by Yanghaoyu Chen, Yichong Ma, Zihan Shu, Haozhe Zhang, Lutong Zhang. </p >-->
+              <p
+                style="line-height: 2; text-align: left; padding-left:120px; padding-top:50px;font-family: 'Quicksand', sans-serif;"
+              >
+                InMotion is a program that helps you keep track of your
+                emotional status. It adopts Face-api, which allows InMotion to
+                analyze the stories buried underneath your facial expressions.
+                Through the webcam, in each frame InMotion captures and
+                discovers the ratio of seven emotional categories: happy,
+                neutral, surprised, sad, angry, disgusted, and fearful,
+                respectively. The data is visualized by presenting the
+                composition of your emotion in real-time two-dimensional
+                diagram. By moving the cursor around, you can readily take an
+                insight into your emotion at any moment.
+              </p>
+            </div>
           </div>
         </div>
       </div>
