--- a/video.html
+++ b/video.html
@@ -24,13 +24,17 @@
 </head>
 
 <body>
-  <div class="">
+  <div class="align-items-center justify-content-center">
     <div class="container col">
-      <div id="canvasDiv" class="text-center align-items-center justify-content-center">
-        <video id="video" width="50%" height="50%" autoplay muted style="border-radius:100px;">
-          <source src="video_test.mp4" type="video/mp4">
-        </video>
+      <div id="canvasDiv">
+        <video id="video" width="80%" height="80%" autoplay muted style="border-radius:100px;"></video>
       </div>
+      <!-- <div id="canvasDiv" class="text-center align-items-center justify-content-center">
+         <video id="video" width="50%" height="50%" autoplay muted style="border-radius:100px;">
+          <source src="video_test2.mp4" type="video/mp4">
+        </video> 
+        <video id="video" width="80%" height="80%" autoplay muted style="border-radius:100px;"></video>
+      </div> -->
     </div>
   </div>
 
@@ -46,7 +50,8 @@
 
   <div id="tester"></div>
 
-  <div class="container-fluid" style="font-family: 'Quicksand', sans-serif;background-color: #F8F9F9   ;">
+  <div class="container-fluid align-items-center justify-content-center"
+    style="font-family: 'Quicksand', sans-serif;background-color: #F8F9F9   ;">
     <p style="text-align: center;font-weight: bold;">Credits:</p>
     <p style="text-align: center;">
       InMotion is proudly provided by five cool Florida Gators: Yanghaoyu
