--- a/video.html
+++ b/video.html
@@ -26,14 +26,14 @@
 <body>
   <div class="align-items-center justify-content-center">
     <div class="container col">
-      <div id="canvasDiv">
-        <video id="video" width="80%" height="80%" autoplay muted style="border-radius:100px;"></video>
+      <div id="canvasDiv" class="text-center align-items-center justify-content-center">
+        <video id="video" autoplay muted style="border-radius:100px;"></video>
       </div>
       <!-- <div id="canvasDiv" class="text-center align-items-center justify-content-center">
          <video id="video" width="50%" height="50%" autoplay muted style="border-radius:100px;">
           <source src="video_test2.mp4" type="video/mp4">
         </video> 
-        <video id="video" width="80%" height="80%" autoplay muted style="border-radius:100px;"></video>
+      
       </div> -->
     </div>
   </div>
