--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all" />
   <script defer src="face-api.min.js"></script>
-  <script defer src="./scriptHomepage.js"></script>
+  <script defer type="module" src="./scriptHomepage.js"></script>
   <title>InMotion - An Insight into Your Emotions</title>
 </head>
 
