--- a/login.html
+++ b/login.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <title>Welcome To InMotion</title>
-</head>
-
-<body>
-  <nav class="navbar bg-dark">
-    <h1>
-      <a href="index.html"><i class="fas fa-code"></i> InMotion</a>
-    </h1>
-    <ul>
-      <li><a href="profiles.html">Profile</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="login.html">Login</a></li>
-    </ul>
-  </nav>
-
-  <form id="loginForm" class="form" action="http://localhost:8080/user" method="POST">
-    <div class="form-group">
-      <input type="email" placeholder="Email Address" name="email" required />
-    </div>
-    <div class="form-group">
-      <input type="password" placeholder="Password" name="password" />
-    </div>
-    <button>Click me</button>
-  </form>
-  </section>
-</body>
-
-
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Welcome To The Developer Connector</title>
+  </head>
+  <body>
+    <nav class="navbar bg-dark">
+      <h1>
+        <a href="index.html"><i class="fas fa-code"></i> DevConnector</a>
+      </h1>
+      <ul>
+        <li><a href="profiles.html">Developers</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </nav>
+    <section class="container">
+      <h1 class="large text-primary">Sign In</h1>
+      <p class="lead"><i class="fas fa-user"></i> Sign into Your Account</p>
+      <form class="form" action="dashboard.html">
+        <div class="form-group">
+          <input
+            type="email"
+            placeholder="Email Address"
+            name="email"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input type="password" placeholder="Password" name="password" />
+        </div>
+        <input type="submit" class="btn btn-primary" value="Login" />
+      </form>
+      <p class="my-1">
+        Don't have an account? <a href="register.html">Sign Up</a>
+      </p>
+    </section>
+  </body>
 </html>
