--- a/register.html
+++ b/register.html
@@ -21,10 +21,10 @@
   <body>
     <nav class="navbar bg-dark">
       <h1>
-        <a href="index.html"><i class="fas fa-code"></i> InMotion</a>
+        <a href="index.html"><i class="fas fa-code"></i> DevConnector</a>
       </h1>
       <ul>
-        <li><a href="profiles.html">Profile</a></li>
+        <li><a href="profiles.html">Developers</a></li>
         <li><a href="register.html">Register</a></li>
         <li><a href="login.html">Login</a></li>
       </ul>
@@ -37,12 +37,7 @@
           <input type="text" placeholder="Name" name="name" required />
         </div>
         <div class="form-group">
-          <input
-            type="email"
-            placeholder="Email Address"
-            name="email"
-            required
-          />
+          <input type="email" placeholder="Email Address" name="email" />
           <small class="form-text"
             >This site uses Gravatar so if you want a profile image, use a
             Gravatar email</small
@@ -54,7 +49,6 @@
             placeholder="Password"
             name="password"
             minlength="6"
-            required
           />
         </div>
         <div class="form-group">
@@ -63,7 +57,6 @@
             placeholder="Confirm Password"
             name="password2"
             minlength="6"
-            required
           />
         </div>
         <input type="submit" class="btn btn-primary" value="Register" />
