--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
     <section class="container">
       <h1 class="large text-primary">Sign In</h1>
       <p class="lead"><i class="fas fa-user"></i> Sign into Your Account</p>
-      <form class="form" action="dashboard.html">
+      <form class="form" action="http://localhost:8080/api/auth" method="POST">
         <div class="form-group">
           <input
             type="email"
