--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
     <section class="container">
       <h1 class="large text-primary">Sign Up</h1>
       <p class="lead"><i class="fas fa-user"></i> Create Your Account</p>
-      <form class="form" action="create-profile.html">
+      <form class="form" action="http://localhost:8080/user" method="POST">
         <div class="form-group">
           <input type="text" placeholder="Name" name="name" required />
         </div>
