Auto stash before merge of "ZLTsingleDetect" and "origin/ZLTsingleDetect"

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <span style="color:cornflowerblue">I</span>n<span
         style="color:cornflowerblue"
         >M</span
-      >option
+      >otion
     </h1>
 
     <h2
