--- a/login.html
+++ b/login.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="auth.js"></script>
+    <title>Welcome To InMotion</title>
+  </head>
 
   <link rel="stylesheet" href="css/style.css" />
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <title>Welcome To InMotion</title>
 </head>
 
-<body>
-  <nav class="navbar bg-dark">
-    <h1>
-      <a href="index.html"><i class="fas fa-code"></i> InMotion</a>
-    </h1>
-    <ul>
-      <li><a href="profiles.html">Profile</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="login.html">Login</a></li>
-    </ul>
-  </nav>
-
-  <section class="container">
-    <script src="auth.js"></script>
+    <section class="container">
     </div>
     <h1 class="large text-primary">Sign In</h1>
     <p class="lead"><i class="fas fa-user"></i> Sign into Your Account</p>
