--- a/register.html
+++ b/register.html
@@ -16,15 +16,17 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>Welcome To The Developer Connector</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="auth.js"></script>
+    <title>Welcome To InMotion</title>
   </head>
   <body>
     <nav class="navbar bg-dark">
       <h1>
-        <a href="index.html"><i class="fas fa-code"></i> DevConnector</a>
+        <a href="index.html"><i class="fas fa-code"></i> InMotion</a>
       </h1>
       <ul>
-        <li><a href="profiles.html">Developers</a></li>
+        <li><a href="profiles.html">Profiles</a></li>
         <li><a href="register.html">Register</a></li>
         <li><a href="login.html">Login</a></li>
       </ul>
@@ -32,12 +34,12 @@
     <section class="container">
       <h1 class="large text-primary">Sign Up</h1>
       <p class="lead"><i class="fas fa-user"></i> Create Your Account</p>
-      <form class="form" action="http://localhost:8080/user" method="POST">
+      <form id="registerForm" class="form" action="localhost:8080/assss">
         <div class="form-group">
-          <input type="text" placeholder="Name" name="name" required />
+          <input type="text" placeholder="Name" name="name" id="name" required />
         </div>
         <div class="form-group">
-          <input type="email" placeholder="Email Address" name="email" />
+          <input type="email" placeholder="Email Address" name="email" id="email"/>
           <small class="form-text"
             >This site uses Gravatar so if you want a profile image, use a
             Gravatar email</small
@@ -49,6 +51,7 @@
             placeholder="Password"
             name="password"
             minlength="6"
+            id="password"
           />
         </div>
         <div class="form-group">
@@ -59,7 +62,7 @@
             minlength="6"
           />
         </div>
-        <input type="submit" class="btn btn-primary" value="Register" />
+        <input type="submit" class="btn btn-primary" value="Register" onclick="register(document.getElementById('name').value, document.getElementById('email').value, document.getElementById('password').value)"/>
       </form>
       <p class="my-1">
         Already have an account? <a href="login.html">Sign In</a>
