--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
     </div>
     <h1 class="large text-primary">Sign In</h1>
     <p class="lead"><i class="fas fa-user"></i> Sign into Your Account</p>
-    <form id="loginForm" class="form" >
+    <form id="loginForm" class="form" action="localhost:8080/jasfibuas">
       <div class="form-group">
         <input type="email" placeholder="Email Address" name="email" id="email" required />
       </div>
