--- a/index.html
+++ b/index.html
@@ -1,99 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="icon"
-      href="https://github.com/LeChn/hackduke2019/blob/master/favicon.png?raw=true"
-    />
-    <link rel="stylesheet" type="text/css" href="theme.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Quicksand&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      media="all"
-    />
+  <!-- Bootstrap CSS -->
+  <link rel="icon" href="https://github.com/LeChn/hackduke2019/blob/master/favicon.png?raw=true" />
+  <link rel="stylesheet" type="text/css" href="theme.css" />
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Quicksand&display=swap" rel="stylesheet" />
 
-    <title>InMotion - An Insight into Your Emotions</title>
-  </head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all" />
 
-  <body>
-    <nav class="navbar bg-dark">
-      <h1>
-        <a href="index.html"><i class="fas fa-code"></i> InMotion</a>
-      </h1>
-      <ul>
-        <li><a href="profiles.html">Profile</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="login.html">Login</a></li>
-      </ul>
-    </nav>
+  <title>InMotion - An Insight into Your Emotions</title>
+</head>
 
-    <h1
-      class="tracking-in-expand centered"
-      style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; "
-    >
-      <span style="color:cornflowerblue">I</span>n<span
-        style="color:cornflowerblue"
-        >M</span
-      >option
+<body>
+  <nav class="navbar bg-dark">
+    <h1>
+      <a href="index.html"><i class="fas fa-code"></i> InMotion</a>
     </h1>
+    <ul>
+      <li><a href="profiles.html">Profile</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
+  </nav>
 
-    <h2
-      class="tracking-in-contract centeredBot"
-      style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; "
-    >
-      An Insight into your emotion
-    </h2>
+  <h1 class="tracking-in-expand centered"
+    style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; ">
+    <span style="color:cornflowerblue">I</span>n<span style="color:cornflowerblue">M</span>option
+  </h1>
 
+  <h2 class="tracking-in-contract centeredBot"
+    style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; ">
+    An Insight into your emotion
+  </h2>
+
+  <div>
     <div>
       <input type="file" id="imageUpload" />
-      <a href="video.html"
-        ><button
-          style="position: fixed;top:60%; left:46%;"
-          type="button"
-          class="btn btn-success btn-lg"
-        >
-          Demo <i class="fa fa-chevron-circle-right hvr-icon"></i></button
-      ></a>
+      <div id="imageShow" style="position: absolute;"></div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <input type='file' id="videoUpload">
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script defer src="face-api.min.js"></script>
-    <script defer type="module" src="./scriptHomepage.js"></script>
-  </body>
+    <a href="video.html"><button style="position: fixed;top:60%; left:46%;" type="button"
+        class="btn btn-success btn-lg">
+        Demo <i class="fa fa-chevron-circle-right hvr-icon"></i></button></a>
+  </div>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script defer src="face-api.min.js"></script>
+  <script defer type="module" src="./scriptHomepage.js"></script>
+</body>
+
 </html>
