--- a/video.html
+++ b/video.html
@@ -1,4 +1,3 @@
-.
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,17 +23,13 @@
 </head>
 
 <body>
+  <input type='file' id="videoUpload">
   <div class="align-items-center justify-content-center">
     <div class="container col">
       <div id="canvasDiv">
-        <video id="video" autoplay muted style="border-radius:100px;"></video>
+        <video id="video" src='' autoplay muted loop style="border-radius:100px;">
+        </video>
       </div>
-      <!-- <div id="canvasDiv" class="text-center align-items-center justify-content-center">
-         <video id="video" width="50%" height="50%" autoplay muted style="border-radius:100px;">
-          <source src="video_test2.mp4" type="video/mp4">
-        </video> 
-      
-      </div> -->
     </div>
   </div>
 
