Can now upload img to mongo

--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
 
     <div>
       <input type="file" id="imageUpload" />
+      <script>
+        // function encodeImageFileAsURL(element) {
+        //   var file = element.files[0];
+        //   var reader = new FileReader();
+        //   reader.onloadend = function() {
+        //     console.log("RESULT", reader.result);
+        //   };
+        //   reader.readAsDataURL(file);
+        // }
+      </script>
       <a href="video.html"
         ><button
           style="position: fixed;top:60%; left:46%;"
