--- a/video.html
+++ b/video.html
@@ -59,7 +59,7 @@
     <p style="text-align: center;font-weight: bold;">Credits:</p>
     <p style="text-align: center;">
       InMotion is proudly provided by five cool Florida Gators: Yanghaoyu
-      Chen, Yichong Ma, Zihan shu, Haozhe Zhang and Lutong Zhang.
+      Chen, Yichong Ma, Zihan Shu, Haozhe Zhang and Lutong Zhang.
     </p>
   </div>
 </body>
