--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all" />
   <title>InMotion - An Insight into Your Emotions</title>
 </head>
-
+<nav class="navbar bg-dark">
+  <h1>
+    <a href="index.html"><i class="fas fa-code"></i> InMotion</a>
+  </h1>
+  <ul>
+    <li><a href="register.html">Register</a></li>
+    <li><a href="login.html">Login</a></li>
+  </ul>
+</nav>
 <body>
   <h1 class="tracking-in-expand centered"
     style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; ">
@@ -34,12 +42,6 @@
     style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; ">
     <span style="color:cornflowerblue">I</span>n<span style="color:cornflowerblue">M</span>otion
   </h1>
-  <ul>
-    <li><a href="profiles.html">Profile</a></li>
-    <li><a href="register.html">Register</a></li>
-    <li><a href="login.html">Login</a></li>
-  </ul>
-  </nav>
 
   <h2 class="tracking-in-contract centeredBot"
     style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; ">
@@ -70,9 +72,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css" />
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script defer src="face-api.min.js"></script>
   <script defer type="module" src="./scriptHomepage.js"></script>
