fixed stacked pics and alert

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </ul>
 </nav>
 <body>
-  <h1 class="tracking-in-expand centered"
+  <h1 class="centeredTop"
     style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; ">
     <span style="color:cornflowerblue">I</span>n<span style="color:cornflowerblue">M</span>otion
   </h1>
@@ -33,12 +33,7 @@
   <title>InMotion - An Insight into Your Emotions</title>
   </head>
 
-  <h1 class="tracking-in-expand centered"
-    style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; ">
-    <span style="color:cornflowerblue">I</span>n<span style="color:cornflowerblue">M</span>otion
-  </h1>
-
-  <h2 class="tracking-in-contract centeredBot"
+  <h2 class="centered"
     style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; ">
     An Insight into your emotion
   </h2>
@@ -49,11 +44,11 @@
 
   <div>
     <div>
-      <input type="file" id="imageUpload" />
-      <div id="imageShow" style="position: absolute;"></div>
+      <input class="centeredBot" type="file" id="imageUpload" />
+      <div id="imageShow" style="width:50%; height:50%"></div>
     </div>
 
-    <a href="video.html"><button style="position: fixed;top:60%; left:46%;" type="button"
+    <a href="video.html"><button style="position: fixed;top:80%; left:46%;" type="button"
         class="btn btn-success btn-lg">
         Demo <i class="fa fa-chevron-circle-right hvr-icon"></i></button></a>
   </div>
