--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
     <section class="container">
       <h1 class="large text-primary">Sign Up</h1>
       <p class="lead"><i class="fas fa-user"></i> Create Your Account</p>
-      <form id="registerForm" class="form" action="index.html">
+      <form id="registerForm" class="form" action="localhost:8080/user">
         <div class="form-group">
           <input
             type="text"
