remove failed detection

--- a/video.html
+++ b/video.html
@@ -61,8 +61,8 @@
 <div class="container-fluid" style="font-family: 'Quicksand', sans-serif;background-color: #F8F9F9   ;">
   <p style="text-align: center;font-weight: bold;">Credits:</p>
   <p style="text-align: center;">
-    InMotion is proudly provided by five cool Florida Gators: Yanghaoyu
-    Chen, Yichong Ma, Zihan Shu, Haozhe Zhang and Lutong Zhang.
+    InMotion:Reforged is built by four Florida Gators: Jason
+    Chen, Zihan Shu, Haozhe Zhang and Lutong Zhang.
   </p>
 </div>
 </body>
