--- a/video.html
+++ b/video.html
@@ -22,9 +22,16 @@
 </head>
 
 <body>
+	<h2
+			class="centered"
+			style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; "
+		>
+			Select your video file!
+		</h2>
 	<div align="center">
-		<input type='file' id="videoUpload">
+		<input type='file' class="btn btn-primary" accept=".mp4"  id="videoUpload">
 	</div>
+	<br/>
 	<div class="align-items-center justify-content-center">
 	<div class="container col">
 		<div id="canvasDiv" align="center">
