--- a/video.html
+++ b/video.html
@@ -22,23 +22,23 @@
 </head>
 
 <body>
-	<h2
-			class="centered"
-			style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; "
-		>
-			Select your video file!
-		</h2>
-	<div align="center">
-		<input type='file' class="btn btn-primary" accept=".mp4"  id="videoUpload">
-	</div>
-	<br/>
+	
 	<div class="align-items-center justify-content-center">
-	<div class="container col">
-		<div id="canvasDiv" align="center">
-		<video id="video" muted style="border-radius:100px;">
-		</video>
-		</div>
-	</div>
+    <div class="container col">
+      <div class="">
+        <div class="container col">
+          <div id="canvasDiv" class="text-center align-items-center justify-content-center">
+            <video
+              id="video"
+              width="50%"
+              height="50%"
+              autoplay
+              muted
+              style="border-radius:100px;" ></video>
+          </div>
+        </div>
+      </div>
+    </div>
 	</div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -68,8 +68,8 @@
 <div class="container-fluid" style="font-family: 'Quicksand', sans-serif;background-color: #F8F9F9   ;">
   <p style="text-align: center;font-weight: bold;">Credits:</p>
   <p style="text-align: center;">
-    InMotion:Reforged is built by four Florida Gators: Jason
-    Chen, Zihan Shu, Haozhe Zhang and Lutong Zhang.
+    InMotion is built by UF student developers: Jason
+    Chen, Zihan Shu, Haozhe Zhang and Louis Zhang.
   </p>
 </div>
 </body>
