--- a/video.html
+++ b/video.html
@@ -35,8 +35,9 @@
 	<div class="align-items-center justify-content-center">
 	<div class="container col">
 		<div id="canvasDiv" align="center">
-		<video id="video" muted style="width:50%">
-		</video>
+			<video id="video" style="width:50%" poster="/img/emotion.gif"></video>
+			<p> you appear to be </p>
+			<p> but you're actually </p>
 		</div>
 	</div>
 	</div>
