Descriptive text now changes in response to the emotions

--- a/video.html
+++ b/video.html
@@ -36,7 +36,8 @@
 	<div class="container col">
 		<div id="canvasDiv" align="center">
 			<video id="video" style="width:50%" poster="/img/emotion.gif"></video>
-			<p> you appear to be </p>
+      <p id="appearToBeText"> you appear to be </p>
+      <!-- <img id="appearToBe" /> -->
 			<p> but you're actually </p>
 		</div>
 	</div>
