gradual change completed

--- a/video.html
+++ b/video.html
@@ -36,9 +36,10 @@
 	<div class="container col">
 		<div id="canvasDiv" align="center">
 			<video id="video" style="width:50%" poster="/img/emotion.gif"></video>
-      <p id="appearToBeText"> you appear to be </p>
-      <!-- <img id="appearToBe" /> -->
-			<p> but you're actually </p>
+		</div>
+		<div style="margin-left:40%">
+			<p id="appear"> it appears to be </p>
+			<p id="actually"> what it appears to be </p>
 		</div>
 	</div>
 	</div>
