--- a/video.html
+++ b/video.html
@@ -34,6 +34,7 @@
 	</div>
 	<div class="align-items-center justify-content-center">
 	<div class="container col">
+    <button id="cam">Web Cam</button>
 		<div id="canvasDiv" align="center">
 			<video id="video" style="width:50%" poster="/img/emotion.gif"></video>
 		</div>
